update project defaults